Integrasi API Logos
